# aoc-2023-in-rust

./: Cargo.toml
