[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
regex = "1"
parse-display = "0.8.2"
nom = "7.1.3"
rayon = "1.8.0"
itertools = "0.12.0"
colored = "2.1.0"
cached = "0.46.1"
